fix(ui): fix horizontal scrollbar for sidebar menu

--- a/ui/src/assets/style/layout/header/_header-base.scss
+++ b/ui/src/assets/style/layout/header/_header-base.scss
@@ -36,7 +36,7 @@
     cursor: pointer;
     color: var(--bs-primary);
     font-size: larger;
-    padding-right: 1rem;
+    padding-right: 0.5rem;
 }
 
 .app-header__menu,
